--- a/app/views/pokemons/edit.html.erb
+++ b/app/views/pokemons/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Pokedex</h1>
 
-<%= form_for :pokemon do |f| %>
+<%= form_with scope: :pokemon, url: pokemon_path, method: "put", local: true do |f| %>
   <p>
     <%= f.label :name %><br>
     <%= f.text_field :name %>
@@ -42,8 +42,6 @@
   </p>
 <% end %>
 
-<%= form_for :pokemon, url: {action: "delete"} do |f| %>
-  <p>
-    <%= f.submit 'delete' %>
-  </p>
-<% end %>
+<td><%= link_to 'delete', pokemon_path(@pokemon),
+        method: :delete,
+        data: { confirm: 'Are you sure?' } %></td>
